client/styles/main.styl
$font-family-base ?= 'Roboto', sans-serif

inverse-color = #111
inverse-text-color = #e8e8e8
$brand-primary ?= #00b5ff
love-color = #cf0032

$navbar-inverse-bg ?= inverse-color
$navbar-inverse-border ?= inverse-color
$navbar-inverse-color ?= inverse-text-color
$navbar-inverse-link-color ?= inverse-text-color

footer-size-large = 110
footer-size-small = 320
footer-bottom-padding = 30

mobile-width = 992px

html
  overflow-y: scroll // force the scrollbar on... stops jumpy header on small content pages
  position: relative
  min-height: 100%

body
  margin-bottom: (footer-size-large + footer-bottom-padding)px !important
  @media (max-width: mobile-width)
    margin-bottom: (footer-size-small + footer-bottom-padding)px !important

#loading
  background:url("/assets/images/loading.gif") no-repeat center center
  height: 100%
  width: 100%

.content
  position: relative
  max-width: 100%
  width: 100%
  overflow: hidden
  padding-top: 50px

.footer
  position: absolute
  text-align: center
  background-color: inverse-color
  color: inverse-text-color
  padding-top: 10px
  bottom: 0px
  width: 100%
  height: (footer-size-large)px
  @media (max-width: mobile-width)
    height: (footer-size-small)px

.my-nav
  .navbar-inverse, .navbar-collapse
    border-color:inverse-color !important
    box-shadow: none !important
  padding-right: 10%
  padding-left: 10%

.navbar-inverse
  background-color: #111 !important
  border-color: #111 !important

.landing-content
  position: static !important
  padding-top: 20px !important
  padding-right: 5% !important
  padding-left: 5% !important
  padding-bottom: 20px!important
  text-align: center
  cursor: default

.landing-image-wrap
  background-color: inverse-color

.landing-image
  margin: auto
  border-style: solid
  max-height: 600px
  min-height: 450px
  @media (max-width: mobile-width)
    display: none !important

.quick-about
  position: relative
  @media (min-width: mobile-width)
    position: absolute;
    min-height: 200px
    height: auto
    max-height: 350px
    top: 100px
    width: 28em
    left: 8%
    z-index: 300
    border: 0px !important
    background: rgba(1, 1, 1, 0.8) !important
    color: rgb(255, 255, 255)

.landing-user
  position: relative
  @media (min-width: mobile-width)
    position: absolute;
    min-height: 200px
    height: auto
    max-height: 430px
    top: 70px
    width: 20em
    left: 60%
    z-index: 300

.nav-signin
  height: auto
  width: 20em
  li > a
    color: $brand-primary !important
    background-color: #fff  !important
    border-bottom: 1px solid #ddd !important
  li.active > a
    color: #808080 !important
    border-bottom-color: transparent !important
  ul
    border-bottom: 1px solid #ddd !important
    float: none !important
    a
      padding: 10px 15px !important
  .tab-content
    text-align: center

.single-page-element
  text-align: center
  width: 30em
  max-width: 100%
  margin: auto
  margin-top: 30px

.love
  color: love-color

.point-at
  cursor: pointer

@import 'bootstrap/index'

